Fixed overlap. Fixes #18

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -60,6 +60,7 @@ body {
 
         &.left {
           left: 10px;
+          z-index: 1;
         }
 
         &.right {
